2014-07-17  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/omp.xsl (report [section-list]): Replace "Details"
	in "Task: Details" with task name.

2014-07-17  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/graphics.xsl (js-secinfo-top-visualization): Get
	filter term from get_info_response for consistency with filter box.

2014-07-17  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/gsa-style.css: Make area around chart menu arrow
	wider and change positioning of header text so it isn't narrowed by
	the wider area around the arrow.

	* src/html/classic/omp.xsl (get_aggregate): Add the filter term if
	one was given. Fit window to the size of the chart when opened via
	open_detached. Ensure chart is full size when reloading page.

	* src/html/classic/js/gsa_graphics_base.js (open_detached): Set
	variable to fit window to the size of the chart.
	(fit_detached_window): New function.
	(detached_chart_resize_listener): Add filter div to height calulation.

2014-07-16  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/omp.xsl (host): Show OS name and CPE as text after
	the OS icon.
	(os-icon): Add paramter os-cpe.
	(report [os]): Add paramter os-cpe to OS icon to hide CPE.

2014-07-15  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/omp.xsl (result [result-headers], report [hosts])
	(report [prognostic_hosts], report [closed_cves], report [ssl_certs]):
	Make host IPs links to the host details (asset management) page.

2014-07-15  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/omp.xsl (os-icon): Add CPE ID to tooltip and link
	to CPE page.

2014-07-15  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/gsad_omp.c (save_chart_preference_omp): Remove log message used
	for testing.

2014-07-15  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Save the user's chart selection for the current session.

	* src/gsad_base.h (credentials_t): Add chart_prefs field.
